src/css/navigationbar.css
@import url('https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css');

.navbar{
    background-color: #19181F;
    border-bottom: 1px solid #303743;
}

.navbar-brand {
    padding-left: 9%;
    height: 90px;
    display: flex;
  	justify-content: center;
  	align-items: center;
    transition: all 0.25s ease-in-out;
}

.navbar-brand img{
    height: 80px;
    width: 100%;
}

.nav{
    margin-left:auto;
    padding-right: 12%;
    font-size: 25px !important;
}

.nav-item a{
    color: white !important;
}

.nav-item a:hover{
    color: gray !important;
}

.movie-matcher-link{
    margin-top:5px;
    font-size: 18px;
    margin-top: 8px;
}

@media screen and (max-width: 500px) {
    .navbar-brand img{
        width: 210px;
        height: auto;
    }
    .navbar-brand{
        padding-left: 0%;
        margin-left: -20px;
    }
}

@media screen and (max-width: 350px) {
    .navbar-brand img{
        width: 170px;
        height: auto;
    }
    .navbar-brand{
        margin-left: -30px;
    }
}

